Rendering lots of text in D3D12 causes Ring Buffer allocation failures

XMLWordPrintable

      When JavaFX is built with -PCONF=Release and RenderPerfTest is run with following flags:
      -Dprism.verbose=true -Dprism.debug=true -Djavafx.animation.fullspeed=true -Dprism.d3d12.debugLayers=true -Dprism.order=d3d12 renderperf.RenderPerfTest -t WhiteText -n 10000

      Backend will frequently skip rendering some Text nodes and print multiple error messages per frame like below:
      [D3D12-ERROR] <Internal\D3D12RingContainer.cpp:140> Ring Container 'Main Ring Buffer' fully allocated, cannot allocate 524288 bytes (h: 65536 t: 33095680 used: 33030144 size 33554432)
      [D3D12-ERROR] <D3D12NativeDevice.cpp:503> Ring Buffer allocation failed

            Assignee:
            Lukasz Kostyra
            Reporter:
            Lukasz Kostyra
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: