8359815: Rendering lots of text in D3D12 causes Ring Buffer allocation failures

Issue was due to RingContainer incorrectly awaiting for next checkpoint
on the corner-case of RingContainer wrapping around to the beginning -
needed space provided to AwaitNextCheckpoint was only the (size) instead
of (size + padding to the end of the Buffer).